Bug 95195 - Tonga agd5f drm-next-4.7-wip UVD Oops/lock since drm/amdgpu: keep vm in job instead of ib
Summary: Tonga agd5f drm-next-4.7-wip UVD Oops/lock since drm/amdgpu: keep vm in job i...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/AMDgpu (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-28 20:39 UTC by Andy Furniss
Modified: 2016-05-02 22:47 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg showing Oops (63.34 KB, text/plain)
2016-04-28 20:39 UTC, Andy Furniss
no flags Details
possible fix (1.05 KB, patch)
2016-04-28 21:06 UTC, Alex Deucher
no flags Details | Splinter Review

Description Andy Furniss 2016-04-28 20:39:41 UTC
Created attachment 123327 [details]
dmesg showing Oops

Tonga on agd5f drm-next-4.7-wip

Getting an Oops followed by a GPU lock using UVD since -

commit 5599239c331b9860c35d5e0fd7c6acbc838fc20d
Author: Monk Liu <Monk.Liu@amd.com>
Date:   Tue Apr 19 20:11:32 2016 +0800

    drm/amdgpu: keep vm in job instead of ib
    
    ib.vm is a legacy way to get vm, after scheduler
    implemented vm should be get from job, and all ibs
    from one job share the same vm, no need to keep ib.vm
    just move vm field to job.
    
    this patch as well add job as paramter to ib_schedule
    so it can get vm from job->vm.

Easy to provoke with powerplay=1 and auto clocks. Harder to provoke, but also  happens with powerplay=0.

dmesg with Oops attached.
Comment 1 Alex Deucher 2016-04-28 21:06:36 UTC
Created attachment 123329 [details] [review]
possible fix

Does the attached patch help?
Comment 2 Andy Furniss 2016-04-28 21:54:53 UTC
(In reply to Alex Deucher from comment #1)
> Created attachment 123329 [details] [review] [review]
> possible fix
> 
> Does the attached patch help?

Yes, so far running OK with that.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.